Chronometer works now

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,9 +19,10 @@
 	color: white;
 }
 
-.timer {
-	font-size: 9em;
+.values {
+	font-size: 4em;
 	color: white;
+	text-align: center;
 }
 
 .back-button-text {
